Bug 14274 - CTDB doesn't retry outgoing connections on bind (and some other) failures
Summary: CTDB doesn't retry outgoing connections on bind (and some other) failures
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.11.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-10 04:50 UTC by Martin Schwenke
Modified: 2020-02-20 09:17 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.12, 4.11, 4.10 (3.42 KB, patch)
2020-02-13 00:47 UTC, Martin Schwenke
amitay: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2020-02-10 04:50:27 UTC
If the private IP address is dropped from an interface (or the interface is simply taken down) then CTDB does not recover.  This is because a bind failure for an outgoing connection does not trigger a retry.

There are some other less likely possibly transient failures that are also not retried.
Comment 1 Martin Schwenke 2020-02-13 00:47:40 UTC
Created attachment 15787 [details]
Patch for 4.12, 4.11, 4.10

Commit cherry-picks cleanly into 4.12 and the resulting patch then applied to 4.11 and 4.10.
Comment 2 Amitay Isaacs 2020-02-13 00:53:54 UTC
Hi Karolin,

This is ready for v4-12, v4-11 and v4-10.

Thanks.
Comment 3 Karolin Seeger 2020-02-17 10:20:38 UTC
(In reply to Amitay Isaacs from comment #2)
Pushed to autobuild-v4-{12,11,10}-test.
Comment 4 Karolin Seeger 2020-02-20 09:17:58 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to all branches.
Closing out bug report.

Thanks!